--- a/my-beta-app/package.json
+++ b/my-beta-app/package.json
@@ -12,11 +12,14 @@
     "@mdi/font": "5.9.55",
     "roboto-fontface": "*",
     "vue": "^3.2.25",
+    "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-service": "^5.0.4",
     "@vuetify/vite-plugin": "^1.0.0-alpha.0",
     "sass": "^1.38.0",
     "sass-loader": "^10.0.0",
